--- a/src/styles/_reset.scss
+++ b/src/styles/_reset.scss
@@ -6,10 +6,12 @@
   padding: 0;
 }
 
-html {
+html,
+body {
   scroll-behavior: smooth;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  overflow-x: hidden;
 }
 
 img,
